Fix portrait tab link color in dark mode

--- a/docs/index.css
+++ b/docs/index.css
@@ -225,7 +225,7 @@ footer {
     color: var(--clr-sec);
   }
   .tab_btn {
-    color: white;
+    color: black;
   }
   .contact-row img {
   filter: invert(100%);
